# regression_monkey

./: .gitignore  LICENSE  README.md  README.zh-CN.md  README_CN.md  TO-DO.md  pyproject.toml  pyrightconfig.json  regression_monkey.py  regression_monkey_common.py  regression_monkey_config.toml  regression_monkey_html.py  regression_monkey_plot.py  regression_monkey_py.py  regression_monkey_stata.py  regression_monkey_test.toml  run_regression_monkey.sh  test_regression_monkey.py
assets/: R引擎样本缓存优化.md  R语言实现reghdfe.md  interactive.html  固定效应与聚类标准误选取指南.md  绘图优化经验.md
config/: config.example.toml  config_snapshot.toml  regression_monkey_config.toml  regression_monkey_example.toml
design_template/: analyst_error_quarter.html
src/regression_monkey/: __init__.py  __main__.py  common.py  html.py  plot.py  py.py  r.py  stata.py
src/regression_monkey/engine/: py.py  r.py  stata.py
src/regression_monkey/plot/: html.py  png.py
