[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/regression_monkey"]

[project]
name = "regression-monkey"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastexcel>=0.19.0",
    "fastparquet>=2026.3.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "xlrd>=2.0.2",
    "xlsxwriter>=3.2.9",
]

[project.scripts]
regression-monkey       = "regression_monkey.__main__:main"
regression-monkey-html  = "regression_monkey.html:main"
regression-monkey-plot  = "regression_monkey.plot:main"
regression-monkey-stata = "regression_monkey.stata:main"

[dependency-groups]
dev = [
    "hatchling>=1.27",
    "ipykernel>=7.2.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths  = ["tests"]
pythonpath = ["src"]
