[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/regression_monkey"]

[project]
name = "regression-monkey"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "scipy>=1.16.2",
]

[project.scripts]
regression-monkey       = "regression_monkey.__main__:main"
regression-monkey-html  = "regression_monkey.plot.html:main"
regression-monkey-plot  = "regression_monkey.plot.png:main"
regression-monkey-r     = "regression_monkey.engine.r:main"
regression-monkey-stata = "regression_monkey.engine.stata:main"

[dependency-groups]
dev = [
    "hatchling>=1.27",
    "ipykernel>=7.2.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths  = ["tests"]
pythonpath = ["src"]
